# whisper_playground

./: .env.example  .gitignore  app.py  main.py  pyproject.toml
docs/: result的格式.md
scripts/: batch_download_voices.py  batch_generate_voice.py  extract_ass_text.py  test_generate_single_voice.py
src/api/v1/: manbo.py
src/config/: settings.py
src/tools/: __init__.py  ass_helper.py  whisper_helper.py
