[project]
name = "whisper-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "llvmlite==0.43.0",
    "numba==0.60.0",
    "numpy==1.26.4",
    "openai-whisper>=20250625",
    "packaging>=26.2",
    "setuptools>=82.0.1",
    "torch==2.0.1",
]
